test/spec_vectors/select/fail/module_1.wat
(module (func $arity-0-implicit (select (nop) (nop) (i32.const 1))))